<resources>
    <string name="app_name">Warehouse</string>
    <string name="codeWrapper">Scan Package Barcode</string>
    <string name="printerIPWrapper">Printer IP Address</string>
    <string name="trailerWrapper">Scan Trailer Barcode</string>
    <string name="doorWrapper">Scan Door Barcode</string>
    <string name="unloadDoorWrapper">Scan Unload Door Barcode</string>
    <string name="trailerSealWrapper">Trailer Seal Barcode</string>
    <string name="ah_subscantext">Sub-Scan</string>
    <string name="SelectScannerString">Select Scanner</string>
    <string name="CurrentScannerString">Current Scanner</string>
    <string name="AssetTagPassword">Required Password to Save Asset Tag</string>
    <string name="AssetTag">Asset Tag</string>
    <string-array name="ah_subscans">
        <item></item>
        <item>OS</item>
        <item>RD</item>
    </string-array>
    <string name="ah_reasontext">Reason</string>
    <string-array name="ah_reasons">
        <item></item>
        <item>Cylindrical</item>
        <item>Non Cardboard Container</item>
        <item>Non Conveyable</item>
    </string-array>
    <string-array name="trailerstatusarray">
        <item></item>
        <item>Empty</item>
        <item>Partial</item>
    </string-array>
    <string name="dim_statustext">Status</string>
    <string name ="dim_hintLength">Length</string>
    <string name="dim_hintWidth">Width</string>
    <string name="dim_hintHeight">Height</string>
    <string name="dim_repeat">Repeat</string>
    <string name="PrintButton">Print</string>
    <string name="trailerstatustext">Trailer Status</string>
    <string name="TrackingHint">Scan Package Barcode</string>
    <string name="os">Origin Scan - OS</string>
    <string name="rd">Receive Scan - RD</string>
    <string name="ps">Position Scan - PS</string>
    <string name="exceptions">Exceptions</string>
    <string name="ziplookup">Zip Lookup</string>
    <string name="staples" translatable="false">Staples</string>
    <string name="sd">Staged for Delivery - SD</string>
    <string name="ah">Additional Handling - AH</string>
    <string name="hw">Held at Warehouse -HW</string>
    <string name="dim">Dimensional Scan -DIM</string>
    <string name="ld">Left on Dock - LD</string>
    <string name="os_confirmation">Are you sure you want to Origin Scan-OS?</string>
    <string name="rd_confirmation">Are you sure you want to Receive Scan-RD?</string>
    <string name="print_confirmation">Print sort label?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="userId">User Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="onePromptRef">Customer Reference</string>
    <string name="printHint">Printer IP Address</string>
    <string name="save">Save</string>
    <string name="actionLogoff">Logoff</string>
    <string name="actionAbout">About</string>
    <string name="actionSelectScanner">Select Scanner</string>
    <string name="actionClear">Clear Scanned Log</string>
    <string name="actionPrintLabel">Print Printer Label</string>
    <string name="actionRecordAsset">Record Asset Tag</string>
    <string name="actionExit">Exit</string>
    <string name="syncUsers">Synchronize Users Data</string>
    <string name="syncUsersCond">Sync Users\'</string>
    <string name="syncZips">Synchronize Zip Scheme Data</string>
    <string name="syncZipsCond">Sync Zips</string>
    <string name="syncAll">Synchronize All</string>
    <string name="syncAllCond">Sync All</string>
    <string name="clearUsers">Clear Users\' Data</string>
    <string name="clearUsersCond">Clear Users</string>
    <string name="clearZipScheme">Clear Zip Scheme Data</string>
    <string name="clearZipSchemeCond">Clear Zip Scheme</string>
    <string name="clearScannedLog">Clear Scanned Log</string>
    <string name="clear">Clear</string>
    <string name="refreshScanner">Refresh Scanner</string>
    <string name="languages">Languages</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="haitianCreole">Haitian-Creole</string>
    <string name="french">French</string>
    <string name="labelLastScan">"Last Scan: "</string>
    <string name="labelRecordsCached">" Records Cached"</string>
    <string name="labelTotalItems">" Total Items"</string>
    <string name="ahError">AH Error</string>
    <string name="subscanSelectionError">A Sub-Scan selection is required</string>
    <string name="reasonSelectionError">A Reason selection is required</string>
    <string name="barcodeError">Barcode Error</string>
    <string name="barcodeInvalidated">The barcode appears to be invalid</string>
    <string name="dimError">DIM Error</string>
    <string name="statusSelectionError">A status selection is required</string>
    <string name="lengthError">Length Error</string>
    <string name="lengthInvalid">The length appears to be invalid</string>
    <string name="widthError">Width Error</string>
    <string name="widthInvalid">The width appears to be invalid</string>
    <string name="heightError">Height Error</string>
    <string name="heightInvalid">The height appears to be invalid</string>
    <string name="scanCustomerRef">Scan Customer Reference Number</string>
    <string name="scanPosBarcode">Scan Position Barcode</string>
    <string name="scanTrayLabel">Scan USPS Tray Label</string>
    <string name="refNumInvalid">The customer reference number appears to be invalid</string>
    <string name="psCodeInvalid">The PS code appears to be invalid</string>
    <string name="trayLabelInvalid">The tray label appears to be invalid</string>
    <string name="firstClassOnly">Bag for First Class Parcels Only</string>
    <string name="belongsFirstClass">First Class Parcel and Belongs in First Class Bag</string>
    <string name="footprintParcelOnly">Bag for Out-of-Footprint Parcels Only</string>
    <string name="belongsOutofFootprint">Out-of-Footprint Parcel and Belongs in Out-of-Footprint Bag</string>
    <string name="zipDoesNotBelong">Parcel Zip Does Not Belong in Bag</string>
    <string name="zipNotFound">ZIP Not Found or Does Not Match</string>
    <string name="loading">Loading...</string>
    <string name="error">Error</string>
    <string name="fileNotRead">The config file could not be read. \rPlease see your device administrator</string>
    <string name="writePermission">Permission is needed to write files</string>
    <string name="exitingApp">Exiting Application</string>
    <string name="readWritePerm">This app must habe permissions to read/write files!</string>
    <string name="loggingIn">Logging In</string>
    <string name="loginFailed">Login Failed</string>
    <string name="userNotNumerical">The entered UserID is not numerical</string>
    <string name="networkError">Network Error</string>
    <string name="enableWifiError">An internet connection is required but not found. Enable WiFi and restart</string>
    <string name="clearedUserData">Cleared All Users\' Data</string>
    <string name="clearedZipSchemeData">Cleared All Zip Scheme Data</string>
    <string name="clearedSyncLog">Cleared Synced Log</string>
    <string name="cancel">Cancel</string>
    <string name="retrievingUserData">Retrieving Users\' Data</string>
    <string name="savingUserData">Saving Users\' Data</string>
    <string name="savedUserRecords">Saved {0} Users\' Records</string>
    <string name="retrievingZipSchemeData">Retrieving Zip Scheme Data</string>
    <string name="savingZipSchemeData">Saving Zip Scheme Data</string>
    <string name="savedZipRecords">Saved {0} Zip Scheme Records</string>
    <string name="checkInternetConnection">Check the device\'s internet connectivity and retry. Consult with your system admin if the problem persists</string>
    <string name="socketTimeoutFailure">Socket Timeout Error</string>
    <string name="synchronizeFailure">Synchronize Failure</string>
    <string name="printPrinterLabel">Print Printer Label</string>
    <string name="printerIpError">Printer IP Error</string>
    <string name="recordAssetSuccess">Record Asset Tag Success</string>
    <string name="recordingAssetTag">Asset tag has been set to "+assetTag+". Application will shutdown to record change!</string>
    <string name="recordAssetError">Record Asset Tag Error</string>
    <string name="assetTagEmpty">Asset Tag cannot be empty.</string>
    <string name="invalidPassword">Invalid Password</string>
    <string name="passwordEmpty">Password cannot be empty.</string>
    <string name="selectScanDevice">Select Scan Device</string>
    <string name="selectDeviceSuccess">Select Scanning Device Success</string>
    <string name="setScanDevice">The scan device has been set to "</string>
    <string name="selectDeviceError">Select Scanning Device Error</string>
    <string name="restartAppScanning">Failed to get the list of supported scanner devices! Please close and restart the application</string>
    <string name="scanWfBag">Scan WF Bag</string>
    <string name="notIpAddress">This doesn\'t appear to be an IP Address</string>
    <string name="unhandledApiCall">Unhandled API call!</string>
    <string name="unknownHostError">Unknown Host Error</string>
    <string name="socketTimeoutError">Socket Timeout Error</string>
    <string name="connectionError">Connection Error</string>
    <string name="checkInternetConnectivity">Check the device\'s internet connectivity and retry.</string>
    <string name="closeTrailer">Close Trailer</string>
    <string name="searching">Searching</string>
    <string name="checkingTraierStatus">Checking trailer status</string>
    <string name="processing">Processing</string>
    <string name="attemptingTrailerClose">Attempting to close trailer</string>
    <string name="trailerBarcodeError">Trailer Barcode Error</string>
    <string name="notValidBarcode">This is not a valid trailer barcode.</string>
    <string name="doorBarcodeError">Door Barcode Error</string>
    <string name="notValidDoor">This is not a valid door barcode.</string>
    <string name="trailerSealBarcodeError">Trailer Seal Barcode Error</string>
    <string name="notValidTrailerSeal">This is not a valid trailer seal barcode.</string>
    <string name="closeError">Close Error</string>
    <string name="apiFailure">API Failure</string>
    <string name="trailerCloseMessage">Trailer Close Message</string>
    <string name="loadTrailer">Load Trailer</string>
    <string name="trailerLoadError">Trailer Load Error</string>
    <string name="trailerLoadTimeout">Trailer Load Timeout. You have not scanned a package within 15 minutes.</string>
    <string name="loadError">Load Error</string>
    <string name="trailerManagement">Trailer Management</string>
    <string name="openTrailer">Open Trailer</string>
    <string name="attemptingOpenTrailer">Attempting to open trailer</string>
    <string name="trailerOpenMessage">Trailer Open Message</string>
    <string name="unloadTrailer">Unload Trailer</string>
    <string name="attemptingUnload">Attempting to unload trailer</string>
    <string name="unloadError">Unload Error</string>
    <string name="trailerUnloadMessage">Trailer Unload Message</string>
    <string name="unloadTrailerComplete">Unload Trailer Complete</string>
    <string name="trailerStatusError">Trailer Status Error</string>
    <string name="statusSelectionRequired">A status selection is required</string>
    <string name="attemptingCompleteTrailer">Attempting to complete trailer.</string>
    <string name="trailerCompleteMessage">Trailer Complete Message</string>
    <string name="packageZipLookup">Package Zip Lookup</string>
    <string name="performingZipLookup">Performing Zip Info Lookup</string>
</resources>
