<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/uxUserIdWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userId">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/userId"
            android:textColorHint="@android:color/transparent"
            android:id="@+id/uxUserId" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/uxPasswordWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/uxUserIdWrapper"
        android:layout_marginTop="4dp"
        android:hint="@string/password">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@android:color/transparent"
            android:id="@+id/uxPassword"
            android:inputType="number"
            android:password="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/uxcmdLogin" />

</LinearLayout>